Added push notification (changes specially to the server)

--- a/Opinio/.gitignore
+++ b/Opinio/.gitignore
@@ -10,3 +10,6 @@
 /platforms/android/build
 /platforms/android/CordovaLib/build
 /platforms/android/com.phonegap.plugins.facebookconnect/myapp889af8-FacebookLib/build
+/platforms/ios
+/platforms/platforms.json
+/plugins/ios.json
